--- a/index.html
+++ b/index.html
@@ -15,6 +15,17 @@
   "></script>
 </head>
 <body>
-  
+
+  <main id="main" class="main">
+
+    <section class="title--section">
+      <h1 id="title" class="title">Title</h1>
+    </section>
+
+    <div id="img-div">
+    </div>
+
+  </main>  
+
 </body>
 </html>
