Fixed test suite

--- a/index.html
+++ b/index.html
@@ -22,8 +22,12 @@
       <h1 id="title" class="title">Title</h1>
     </section>
 
-    <div id="img-div">
-    </div>
+    <p id="description">
+      This is a description
+    </p>
+
+    <form id="survey-form">
+    </form>
 
   </main>  
 
