--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
     </p>
 
     <form id="survey-form">
+      <label for="name">Name</label>
+      <input type="text" id="name" name="name" required/>
+      </label>
     </form>
 
   </main>  
