--- a/index.html
+++ b/index.html
@@ -27,8 +27,13 @@
     </p>
 
     <form id="survey-form">
-      <label for="name">Name</label>
+
+      <label for="name">Name: </label>
       <input type="text" id="name" name="name" required/>
+      </label>
+
+      <label for="email">Email: </label>
+      <input type="text" id="email" name="email" required/>
       </label>
     </form>
 
