Pass content test 6 email validation

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       </label>
 
       <label for="email">Email: </label>
-      <input type="text" id="email" name="email" required/>
+      <input type="email" id="email" name="email" required/>
       </label>
     </form>
 
