--- a/index.html
+++ b/index.html
@@ -28,12 +28,16 @@
 
     <form id="survey-form">
 
-      <label for="name">Name: </label>
+      <label for="name" id="name-label">Name: </label>
       <input type="text" id="name" name="name" required/>
       </label>
 
-      <label for="email">Email: </label>
+      <label for="email" id="email-label">Email: </label>
       <input type="email" id="email" name="email" required/>
+      </label>
+
+      <label for="number" id="number-label">Number: </label>
+      <input type="number" id="number" name="number" min="0" max="1000000" required/>
       </label>
     </form>
 
