--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,6 +15,7 @@
   <script src="https://gitcdn.link/repo/freeCodeCamp/testable-projects-fcc/master/build/bundle.js
   "></script>
 </head>
+
 <body>
 
   <main id="main" class="main">
@@ -29,19 +31,16 @@
     <form id="survey-form">
 
       <label for="name" id="name-label">Name: </label>
-      <input type="text" id="name" name="name" required/>
-      </label>
+      <input type="text" id="name" name="name" placeholder="Enter your name..." required />
 
       <label for="email" id="email-label">Email: </label>
-      <input type="email" id="email" name="email" required/>
-      </label>
+      <input type="email" id="email" name="email" placeholder="Enter your email..." required/>
 
       <label for="number" id="number-label">Number: </label>
-      <input type="number" id="number" name="number" min="0" max="1000000" required/>
-      </label>
+      <input type="number" id="number" name="number" min="0" max="1000000" placeholder="0" required/>
     </form>
 
-  </main>  
+  </main>
 
 </body>
 </html>
