--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>Survey Form</title>
 
   <!-- Fonts/Assets -->
+  <link href="https://fonts.googleapis.com/css?family=Playfair+Display|Work+Sans" rel="stylesheet">
 
   <link rel="stylesheet" href="index.css">
 
@@ -19,32 +20,33 @@
 <body>
 
   <main id="main" class="main">
-
     <section class="title--section">
-      <h1 id="title" class="title">Title</h1>
+      <h1 id="title" class="title">Survey Form</h1>
     </section>
+    <form id="survey-form" class="form--container">
 
-    <p id="description">
-      This is a description
-    </p>
+      <p id="description" class="title--description">Help us collect information!</p>
 
-    <form id="survey-form">
+      <section class="form--section">
+        <div class="form--row">
+          <label for="name" id="name-label">Name: </label>
+          <input type="text" id="name" name="name" placeholder="Enter your name..." required />
+        </div>
 
-      <section>
-        <h2>General Info:</h2>
-        <label for="name" id="name-label">Name: </label>
-        <input type="text" id="name" name="name" placeholder="Enter your name..." required />
+        <div class="form--row">
+          <label for="email" id="email-label">Email: </label>
+          <input type="email" id="email" name="email" placeholder="Enter your email..." required/>
+        </div>
 
-        <label for="email" id="email-label">Email: </label>
-        <input type="email" id="email" name="email" placeholder="Enter your email..." required/>
-
-        <label for="number" id="number-label">Number: </label>
-        <input type="number" id="number" name="number" min="0" max="1000000" placeholder="0" required/>
+        <div class="form--row">
+          <label for="number" id="number-label">Number: </label>
+          <input type="number" id="number" name="number" min="0" max="1000000" placeholder="0" required/>
+        </div>
 
       </section>
 
-      <section>
-        <h2>You're Learning:</h2>
+      <section class="form--section">
+        <h4>Best language</h4>
         <select name="languages" id="dropdown">
           <option value="javascript">JavaScript</option>
           <option value="python">Python</option>
@@ -54,32 +56,36 @@
         </select>
       </section>
 
-      <section>
-        <h2>Interests:</h2>
-        <fieldset>
-          <legend>Do you like or love programming?</legend>
+      <section class="form--section">
+        <h4>Do you like or love programming?</h4>
+        <div class="form--row">
           <label for="like">Like</label>
           <input type="radio" name="like-love" id="like" value="like">
+        </div>
+        <div class="form--row">
           <label for="love">Love</label>
           <input type="radio" name="like-love" id="love" value="love">
-        </fieldset>
+        </div>
+      </section>
+
+      <section class="form-section">
+        <h4>Do you like peanut-butter, jelly, or both?</h4>
+        <div class="form--row">
+          <label for="checkbox1">Peanut-Butter</label>
+          <input type="checkbox" name="" id="checkbox1" value="peanut-butter">
+        </div>
+        <div class="form--row">
+          <label for="checkbox2">Jelly</label>
+          <input type="checkbox" name="" id="checkbox2" value="jelly">
+        </div>
       </section>
 
       <section>
-        <h2>Hard Hitting Questions:</h2>
-        <h3>Do you like peanut-butter, jelly, or both?</h3>
-        <label for="checkbox1">Peanut-Butter</label>
-        <input type="checkbox" name="" id="checkbox1" value="peanut-butter">
-        <label for="checkbox2">Jelly</label>
-        <input type="checkbox" name="" id="checkbox2" value="jelly">
-      </section>
-      
-      <section>
-        <h2>Additional Comments?</h2>
+        <h4>Additional Comments?</h4>
         <textarea name="comments" id="comments" cols="30" rows="10"></textarea>
       </section>
 
-      <button type="submit" id="submit">Submit</button>
+      <button type="submit" id="submit" class="submit--btn">Submit</button>
     </form>
 
   </main>
